--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="Fine Calculator" Height="450" Width="800" WindowStyle="SingleBorderWindow">
     <Grid x:Name="MainRoot" Background="Purple">
         <Grid x:Name="SecondRoot" Background="Yellow" Margin="25,25,25,25">
-            <Grid x:Name="TypeFine" Background="Green" Margin="10,10,330,110">
+            <Grid x:Name="TypeFine"  Margin="10,10,330,110">
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
@@ -22,7 +22,7 @@
                 <RadioButton Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Розмір пені дорівнює ставці НБУ"/>
                 <RadioButton Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Розмір пені дорівнює ставці НБУ"/>
             </Grid>
-            <Grid x:Name="Input" Background="Aqua" Margin="440,10,10,110">
+            <Grid x:Name="Input" Margin="440,10,10,110">
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
@@ -30,17 +30,19 @@
                     <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
                 <TextBox Grid.Row="0" Margin="5,15,5,15" Text="Сума боргу"/>
-                <TextBox Grid.Row="1" Margin="5,15,5,15" Text="Сума боргу"/>
-                <TextBox Grid.Row="2" Margin="5,15,5,15" Text="Сума боргу"/>
-                <Label Grid.Row="3" Margin="5,15,5,15" Content="Сума боргу"/>
+                <DatePicker x:Name="StartData" Grid.Row="1" Margin="150,15,5,15" SelectedDateChanged="DatePicker_SelectedDateChanged"  />
+                <Label Grid.Row="1" Margin="5,15,150,15"></Label>
+                <DatePicker x:Name="EndData" Grid.Row="2" Margin="150,15,5,15" SelectedDateChanged="DatePicker_SelectedDateChanged_1"  />
+                <Label Grid.Row="2" Margin="5,15,150,15"></Label>
+                <Label Grid.Row="3" Margin="5,15,5,15" Content="Сума нарахованої пені"/>
             </Grid>
-            <Grid x:Name="Actions" Background="Crimson" Margin="10,280,10,10" >
+            <Grid x:Name="Actions" Margin="10,280,10,10" >
                 
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <Button Grid.Column="0" Margin="10,20,10,20" Content="Розрахувати розмір пені" ></Button>
+                <Button Grid.Column="0" Margin="10,20,10,20" Content="Розрахувати розмір пені" Click="Button_Click" ></Button>
                 <Button Grid.Column="1" Margin="10,20,10,20" Content="Згенерувати документ Word"></Button>
             </Grid>
         </Grid>
