--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FineCalculator"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
         Title="Fine Calculator" Height="450" Width="800" WindowStyle="SingleBorderWindow">
     <Grid x:Name="MainRoot" Background="Purple">
@@ -17,10 +18,10 @@
                     <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
                 <RadioButton Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Розмір пені дорівнює ставці НБУ"/>
-                <RadioButton Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Розмір пені дорівнює ставці НБУ"/>
-                <RadioButton Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Розмір пені дорівнює ставці НБУ"/>
-                <RadioButton Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Розмір пені дорівнює ставці НБУ"/>
-                <RadioButton Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Розмір пені дорівнює ставці НБУ"/>
+                <RadioButton Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Розмір пені дорівнює подвійній ставці НБУ"/>
+                <RadioButton Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Розмір пені у відсотках"/>
+                <RadioButton Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Пеня за несвоєчасну виплату аліментів"/>
+                <RadioButton Grid.Row="4" HorizontalAlignment="Left" VerticalAlignment="Center" Content="Податкова пеня"/>
             </Grid>
             <Grid x:Name="Input" Margin="440,10,10,110">
                 <Grid.RowDefinitions>
@@ -29,15 +30,15 @@
                     <RowDefinition></RowDefinition>
                     <RowDefinition></RowDefinition>
                 </Grid.RowDefinitions>
-                <TextBox Grid.Row="0" Margin="5,15,5,15" Text="Сума боргу"/>
-                <DatePicker x:Name="StartData" Grid.Row="1" Margin="150,15,5,15" SelectedDateChanged="DatePicker_SelectedDateChanged"  />
-                <Label Grid.Row="1" Margin="5,15,150,15"></Label>
-                <DatePicker x:Name="EndData" Grid.Row="2" Margin="150,15,5,15" SelectedDateChanged="DatePicker_SelectedDateChanged_1"  />
-                <Label Grid.Row="2" Margin="5,15,150,15"></Label>
-                <Label Grid.Row="3" Margin="5,15,5,15" Content="Сума нарахованої пені"/>
+                <TextBox x:Name="Debt" Grid.Row="0" Margin="5,15,5,15"  TextChanged="Debt_TextChanged" materialDesign:HintAssist.Hint="Сума боргу"  materialDesign:HintAssist.IsFloating="False" Cursor="IBeam"/>
+                <DatePicker x:Name="StartData" Grid.Row="1" Margin="5,0,5,0" SelectedDateChanged="DatePicker_SelectedDateChanged" materialDesign:HintAssist.Hint="Дата початку нарахування "  materialDesign:HintAssist.IsFloating="False" Cursor="IBeam"  />
+
+                <DatePicker x:Name="EndData" Grid.Row="2" Margin="5,0,5,0" SelectedDateChanged="DatePicker_SelectedDateChanged_1"  materialDesign:HintAssist.Hint="Дата закінчення нарахування"  materialDesign:HintAssist.IsFloating="False" Cursor="IBeam" />
+
+                <Label Grid.Row="3" Margin="5,15,5,15" Content="Сума нарахованої пені" VerticalAlignment="Center"/>
             </Grid>
             <Grid x:Name="Actions" Margin="10,280,10,10" >
-                
+
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
